--- a/Bowler/appsettings.json
+++ b/Bowler/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BowlersDbConnection": "server=localhost;port=3306;database=bowlingleagueexample;user=root;password=WasteLand14"
+    "BowlersDbConnection": "server=localhost;port=3306;database=bowlingleagueexample;user=root;password=xxx"
   }
 }
